fix: Fixed host can't fetch pending questions Added fetch all question for host and moderator
